# aequilibrae

./: .gitignore  LICENSE.TXT  Pipfile  README.md  conda_forge_recipe.yaml  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/: build_artifacts_qgis.yml  copilot-instructions.md  qgis_requirements.py
.github/workflows/: build_wheels.yml  documentation.yml  test_aequilibrae_environment.yml  test_linux_with_coverage.yml  trigger_dispatch.yml  unit_tests.yml
aequilibrae/: __init__.py  log.py  parameters.py  parameters.yml
aequilibrae/distribution/: __init__.py  gravity_application.py  gravity_calibration.py  ipf.py  ipf_core.py  setup_ipf.py
aequilibrae/distribution/cython/: ipf_core.pyx
aequilibrae/matrix/: __init__.py  aequilibrae_data.py  aequilibrae_matrix.py  coo_demand.pyx  sparse_matrix.pxd  sparse_matrix.pyx
aequilibrae/paths/: AoN.py  __init__.py  all_or_nothing.py  assignment_paths.py  connectivity_analysis.py  graph.py  graph_building.py  linear_approximation.py  multi_threaded_aon.py  multi_threaded_paths.py  network_skimming.py  optimal_strategies.py  public_transport.py  route_choice.py  setup_assignment.py  sub_area.py  traffic_assignment.py  traffic_class.py  vdf.py
aequilibrae/paths/cython/: AoN.pyx  akcelik.pyx  basic_path_finding.pyx  bpr.pyx  bpr2.pyx  conical.pyx  connectivity.pyx  graph_building.pyx  hyperpath.pyx  inrets.pyx  parallel_numpy.pyx  parameters.pxi  path_file_saving.pyx  pq_4ary_heap.pyx  public_transport.pyx  route_choice_link_loading_results.pxd  route_choice_link_loading_results.pyx  route_choice_set.pxd  route_choice_set.pyx  route_choice_set_results.pxd  route_choice_set_results.pyx  route_choice_types.pxd
aequilibrae/paths/results/: __init__.py  assignment_results.py  path_results.py  skim_results.py
aequilibrae/project/: __init__.py  about.py  basic_table.py  database_connection.py  field_editor.py  project.py  project_cleaning.py  project_creation.py  scenario.py  table_loader.py  zone.py  zoning.py
aequilibrae/project/data/: __init__.py  matrices.py  matrix_record.py  result_record.py  results.py
aequilibrae/project/network/: __init__.py  connector_creation.py  gmns_builder.py  gmns_exporter.py  link.py  link_type.py  link_types.py  links.py  mode.py  modes.py  network.py  node.py  nodes.py  period.py  periods.py  safe_class.py
aequilibrae/project/tools/: __init__.py  migration_manager.py  network_simplifier.py
aequilibrae/reference_files/: __init__.py  demo.__init__.py
aequilibrae/transit/: __init__.py  gtfs_loader.py  lib_gtfs.py  map_matching_graph.py  parse_csv.py  route_map_matcher.py  route_system.py  transit.py  transit_graph_builder.py
aequilibrae/transit/functions/: breaking_links_for_stop_access.py
aequilibrae/transit/gtfs_writer/: __init__.py  shape_writer.py
aequilibrae/transit/route_system_reader/: __init__.py  agency_reader.py  pattern_reader.py
aequilibrae/transit/transit_elements/: __init__.py  agency.py  basic_element.py  fare.py  fare_rule.py  mode_correspondence.py  pattern.py  route.py  service.py  stop.py  trip.py
aequilibrae/utils/: aeq_signal.py  create_delaunay_network.py  create_example.py  db_utils.py  geo_index.py  geo_utils.py  model_run_utils.py  python_signal.py  spatialite_utils.py
aequilibrae/utils/interface/: worker_thread.py
aequilibrae/utils/simwrapper/: generate_simwrapper_config.py  simwrapper_panel.py  simwrapper_utils.py
benchmarking/: select_link_benchmark.py  transit_performance.py
docs/: table_documentation.py
docs/source/: aequilibrae_project.rst  conf.py  database_upgrades.rst  distribution_procedures.rst  index.rst  network_manipulation.rst  other_applications.rst  path_computation.rst  public_transport.rst  route_choice.rst  run_module.rst  simwrapper.rst  static_traffic_assignment.rst
docs/source/_latex/: index.rst
docs/source/_templates/: navigation_header.html
docs/source/aequilibrae_project/: parameter_file.rst  project_components.rst  project_database.rst  run_module.rst  transit_database.rst
docs/source/distribution_procedures/: IPF_benchmark.ipynb  classes.rst
docs/source/examples/: readme.rst
docs/source/network_manipulation/: dealing_with_geometries.rst  import_and_export_network.rst
docs/source/path_computation/: aequilibrae_graph.rst
docs/source/public_transport/: hyperpath_routing.rst  transit_skimming.rst
docs/source/traffic_assignment/: assignment_procedures.rst  plot_vdf_functions.py  traffic_assignment_validation.rst  volume_delay_functions.rst
docs/source/useful_links/: api.rst  development.rst  documentation.rst  installation.rst  version_history.rst
docs/website/: check_documentation_versions.py
tests/: conftest.py  models_for_test.py  requirements_tests.txt  test_list_of_files.py
tests/aeq/: __init__.py
tests/aeq/distribution/: test_gravityCalibration.py  test_ipf.py  test_syntheticGravityModel.py
tests/aeq/log/: test_log.py
tests/aeq/matrix/: test_aequilibraeMatrix.py
tests/aeq/paths/: test_akcelik.py  test_allOrNothing.py  test_aon_skimming_single_origin.py  test_conical.py  test_graph.py  test_hyperpath.py  test_inrets.py  test_mc_traffic_assignment.py  test_network_skimming.py  test_parallel_numpy.py  test_pathDisconnected_net.py  test_pathResults.py  test_route_choice.py  test_select_link.py  test_traffic_assignment.py  test_traffic_assignment_equilibration.py  test_traffic_assignment_save_path_files.py  test_traffic_class.py  test_transit_graph_builder.py  test_vdf.py
tests/aeq/project/: test_about.py  test_connector_creation.py  test_create_example.py  test_field_editor.py  test_link.py  test_link_type.py  test_link_type_triggers.py  test_matrices.py  test_migration_manager.py  test_mode.py  test_modes_table_triggers.py  test_network.py  test_network_gmns.py  test_network_node_centroids.py  test_network_simplifier.py  test_network_triggers.py  test_node.py  test_nodes.py  test_osm_downloader.py  test_place_getter.py  test_project.py  test_results.py  test_scenarios.py  test_transit_tables.py  test_transit_triggers.py  test_zoning.py
tests/data/: reference_files.py
(+177 files in other folders)
