[build-system]
requires = ["setuptools", "cython", "wheel"]

[project]
authors = [{ name = "Pedro Camargo", email = "pedro@outerloop.io" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
description = "A package for transportation modeling"
maintainers = [{ name = "AequilibraE contributors" }]
name = "aequilibrae"
readme = "README.md"
requires-python = ">=3.10" # match classifiers above and ruff version below

dependencies = [
  "numpy",
  "scipy>=1.4",
  "pyaml",
  "requests",
  "pandas<3",
  "pyproj",
  "rtree",
  "pyarrow",
  "openmatrix",
  "geopandas",
  "tqdm",
]

[project.license]
file = "LICENSE.TXT"

[project.optional-dependencies]

docs = [
  "enum34",
  "Sphinx",
  "pydata-sphinx-theme",
  "sphinx_autodoc_annotation",
  "matplotlib",
  "folium",
  "mapclassify",
  "sphinx-gallery",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-git",
  "nbconvert",
  "sphinx-tabs",
  "sphinx-subfigure"
]

tests = [
  "setuptools",
  "codecov",
  "pytest",
  "pytest-xdist",
  "pytest-cov",
  "pytest-subtests",
  "pytest-random-order",
  "coveralls",
  "ruff==0.14.8",
  "wheel",
]

# Build system requirement should match
build = ["setuptools", "cython", "wheel"]

dev = ['aequilibrae[build, tests, docs]']

[tool.setuptools.dynamic]
version = { attr = "aequilibrae.version" }

[tool.setuptools.package-dir]
aequilibrae = "aequilibrae"

[tool.setuptools.package-data]
    "aequilibrae.reference_files"= ["spatialite.sqlite", "nauru.zip", "sioux_falls.zip", "coquimbo.zip"]
    "aequilibrae.paths"= ["cython/*.pxi", "cython/*.pyx", "cython/*.pxd"]
    "aequilibrae.distribution"= ["cython/*.pyx"]
    "aequilibrae.matrix"= ["*.pyx", "*.pxd"]
    "aequilibrae"= ["./parameters.yml"]
    "aequilibrae.project"= [
        "database_specification/network/tables/*.*",
        "database_specification/network/triggers/*.*",
        "database_specification/network/migrations/*.*",
        "database_specification/transit/tables/*.*",
        "database_specification/transit/triggers/*.*",
        "database_specification/transit/migrations/*.*",
    ]

[tool.ruff]
lint.select = ["B", "C", "E", "F", "W"]
lint.ignore = ["E501", "F401", "F403", "B028", "B007", "B017"]
exclude = [
    ".idea",
    "__pycache__",
    "sphinx",
    ".ipynb_checkpoints",
    "aequilibrae.egg-info",
    "docs/*",
    "notebooks",
    "bin/hpc",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    ".venv39",
    ".venv310",
    ".venv311",
    ".venv312",
]
line-length = 120
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]

# We do not build wheels for old versions of Python, for 32-bit in either Linux or Windows, or for macOS
skip = ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "*-win32", "*-manylinux_i686", "*-musllinux*", "*-s390x-*", "*-ppc64le-*", "*-macosx*"]

manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
archs = ["auto"]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} "

[tool.cibuildwheel.macos]
archs = ["auto"]
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0" }
repair-wheel-command = "delocate-wheel -vv --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cython-lint]
max-line-length = 120
